# docwarp

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  PRD.md  README.docx  README.md  ROADMAP.docx  ROADMAP.md  competition_report.md  sample.docx  sample.md  test.docx  test.md
.codex/environments/: environment.toml
.github/: dependabot.yml  release-template.md
.github/workflows/: ci.yml  release.yml
Formula/: docwarp.rb  instruct.rb
crates/docwarp-cli/: Cargo.toml
crates/docwarp-cli/src/: main.rs
crates/docwarp-cli/tests/: phase1_fixtures.rs  phase1_reliability.rs  phase2_fidelity.rs  phase3_cli_help.rs  phase5_batch.rs  phase6_guided.rs  phase7_company_templates.rs  phase8_template_map.rs
crates/docwarp-core/: Cargo.toml
crates/docwarp-core/src/: lib.rs  model.rs  report.rs  style_map.rs
crates/docwarp-docx/: Cargo.toml
crates/docwarp-docx/src/: lib.rs
crates/docwarp-md/: Cargo.toml
crates/docwarp-md/src/: lib.rs
crates/instruct-cli/: Cargo.toml
crates/instruct-cli/src/: main.rs
crates/instruct-cli/tests/: phase1_fixtures.rs  phase1_reliability.rs  phase2_fidelity.rs  phase3_cli_help.rs  phase5_batch.rs  phase6_guided.rs
crates/instruct-core/: Cargo.toml
crates/instruct-core/src/: config.rs  model.rs  style_map.rs  warning.rs
crates/instruct-docx/: Cargo.toml
crates/instruct-docx/src/: lib.rs
crates/instruct-md/: Cargo.toml
crates/instruct-md/src/: lib.rs
docs/: agent-equations.md  agent-template-pack.md  configuration.md  homebrew-core.md  install.md  release.md  report-schema.md  strict-mode.md  warnings.md
fixtures/: README.md
fixtures/company_templates/: README.md
fixtures/company_templates/md/: 01-headings-and-body.md  02-nested-lists.md  03-code-and-quote.md  04-tables-and-links.md  05-equations.md  06-comprehensive.md
fixtures/company_templates/style-maps/: acme-by-id.yml  acme-by-name.yml  acme-docx-aliases.yml
fixtures/company_templates/template_parts/: acme-numbering.xml  acme-styles.xml
fixtures/docx/: 01-title-heading-paragraph.docx  02-unordered-list.docx  03-ordered-list.docx  04-blockquote-link.docx  05-fenced-code.docx  06-table.docx  07-inline-formatting.docx  08-image-local.docx  09-mixed-structure.docx  10-comprehensive.docx
fixtures/expected/docx2md/: 01-title-heading-paragraph.md  02-unordered-list.md  04-blockquote-link.md  05-fenced-code.md  06-table.md  07-inline-formatting.md  08-image-local.md  09-mixed-structure.md  10-comprehensive.md
fixtures/md/: 01-title-heading-paragraph.md  02-unordered-list.md  03-ordered-list.md  04-blockquote-link.md  05-fenced-code.md  06-table.md  07-inline-formatting.md  08-image-local.md  09-mixed-structure.md  10-comprehensive.md
packaging/homebrew-core/: docwarp.rb
review/company_template_outputs_2026-02-24/: acme-review.dotx
review/company_template_outputs_2026-02-24-styled/: README.txt  acme-review.dotx
review/company_template_outputs_2026-02-24-styled/by-id/: 06-comprehensive.docx
review/company_template_outputs_2026-02-24-styled/by-name/: 01-headings-and-body.docx  02-nested-lists.docx  03-code-and-quote.docx  04-tables-and-links.docx  05-equations.docx
review/company_template_outputs_2026-02-24-styled/roundtrip-md/: 01-headings-and-body.md  04-tables-and-links.md  05-equations.md
review/company_template_outputs_2026-02-24/by-id/: 01-headings-and-body.docx  02-nested-lists.docx  05-equations.docx
review/company_template_outputs_2026-02-24/by-name/: 03-code-and-quote.docx  04-tables-and-links.docx  06-comprehensive.docx
review/company_template_outputs_2026-02-24/roundtrip-md/: 02-nested-lists.md  03-code-and-quote.md  06-comprehensive.md
review/template_map_outputs_2026-02-24/: acme-review-extracted.json  acme-review-extracted.yml
scripts/: generate_homebrew_core_formula.sh  generate_homebrew_formula.sh  release_quick.sh
