[package]
name = "docwarp-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "docwarp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
docwarp-core = { path = "../docwarp-core" }
docwarp-md = { path = "../docwarp-md" }
docwarp-docx = { path = "../docwarp-docx" }
glob.workspace = true
walkdir.workspace = true
rpassword.workspace = true
tempfile.workspace = true

[dev-dependencies]
zip.workspace = true
