[package]
name = "docwarp-docx"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
quick-xml.workspace = true
zip.workspace = true
ureq.workspace = true
docwarp-core = { path = "../docwarp-core" }
tempfile.workspace = true
latex2mathml.workspace = true
sha2.workspace = true

[dev-dependencies]
