[package]
name = "instruct-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "instruct"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
instruct-core = { path = "../instruct-core" }
instruct-md = { path = "../instruct-md" }
instruct-docx = { path = "../instruct-docx" }

[dev-dependencies]
tempfile.workspace = true
